-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0 RC1
-
None
-
68a662a2e15b790080ea12c2434f6e1fe60bda1b (qtdeclarative)
914b72418b7e766026f2679254fcee93fc920866 causes an assertion at https://qt.gitorious.org/qt/qtdeclarative/source/aedcd57c84ac9d6b74816c13bdf3fde31e1132b5:src/quick/util/qquickpropertychanges.cpp#L294 for a translation bindings in PropertyChanges, i.e.:
import QtQuick 2.0 Item { width: 400 height: 400 Text { id: txt anchors.centerIn: parent } states: [ State { name: "boo"; PropertyChanges { target: txt; text: qsTr("Hello") } } ] }
| For Gerrit Dashboard: QTBUG-38492 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 84127,3 | Fix translations in states causing failing assertions | release | qt/qtdeclarative | Status: MERGED | +2 | 0 |